webProje-chart/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: webproje-service
  namespace: odeon
  labels:
    app: webproje
spec:
  type: NodePort
  ports:
  - port: 80
    targetPort: 80
    nodePort: 30080 
  selector:
    app: webproje
