webProje-chart/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: webproje-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: webproje.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: webproje-service
            port:
              number: 80
